Fix minor ui issues (#82)
* Hide ShowMore button when in searching

* Fix scrollbar position

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,7 +8,6 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 0 20px;
-  overflow-x: hidden;
 }
 
 .Content {
